# bahamut

./: .gitignore  .hgignore  .hgsigs  ADMINSERV  COMPILE.md  Dockerfile  INSTALL  INSTALL.md  Makefile.in  README  SSL  config  configure  configure.in  ircdssl.cnf  opers.txt
.github/workflows/: build.yml
buildbot/: README  fixssl.sh  options.h_hub  options.h_leaf
doc/: Azzurra-TODO  ChangeLog.INT  example.conf  ircd.crt
include/: .cvsignore  as.h  channel.h  common.h  config.h  defs.h  dh.h  h.h  inet.h  info.h  ircsprintf.h  msg.h  nameser.h  numeric.h  patchlevel.h  res.h  resolv.h  send.h  setup.h.in  sha1.h  shs1.h  ssl.h  struct.h  sys.h  va_copy.h
src/: .cvsignore  Makefile.in  as.c  blalloc.c  bsd.c  channel.c  cloak.c  cpan.c  dh.c  dich_conf.c  hash.c  ircd.c  ircsprintf.c  list.c  m_nick.c  m_services.c  m_who.c  match.c  packet.c  parse.c  rc4.c  res.c  res_init.c  rijndael.c  s_auth.c  s_bsd.c  s_conf.c  s_debug.c  s_err.c  s_misc.c  s_serv.c  s_user.c  send.c  sha1.c  shs1.c  ssl.c  support.c  throttle.c  version.c.SH  whowas.c  (+1 more)
tools/: .cvsignore  Makefile.in  chkconf.c  endian.c  install_ircd  mkcloak.c  mkpasswd.c  must_align.c  ssl-cert.sh  ssl-search.sh  uncloak.c  viconf.c
zlib/: ChangeLog  Makefile.in
